--- a/site-src/implementations/v1.2.md
+++ b/site-src/implementations/v1.2.md
@@ -16,37 +16,37 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project                       | Version               | Mode        | GatewayPort8080    | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteResponseHeaderModification   | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRoutePathRedirect   | HTTPRoutePortRedirect   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteSchemeRedirect   | HTTPRouteParentRefPort   |
-|:---------------|:------------------------------|:----------------------|:------------|:-------------------|:-----------------------|:--------------------------|:-----------------------|:------------------------------|:--------------------------------------|:-------------------------------|:-----------------------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:------------------------|:------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------|:-------------------------|
-| Kong           | gateway-operator              | v1.4.0                | expressions | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
-| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
-| cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
-| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
-| istio          | istio                         | 1.24                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
-| nginxinc       | nginx-gateway-fabric          | v1.5.0                | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
-| solo.io        | gloo-gateway                  | v1.18.0               | default     | :x:                | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
-| traefik        | traefik                       | v3.2                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :white_check_mark:            | :white_check_mark:                  | :x:                                         | :x:                       | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
+| Organization | Project                       | Version               | Mode        | GatewayPort8080    | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteResponseHeaderModification   | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRoutePathRedirect   | HTTPRoutePortRedirect   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteSchemeRedirect   | HTTPRouteParentRefPort   |
+|:-------------|:------------------------------|:----------------------|:------------|:-------------------|:-----------------------|:--------------------------|:-----------------------|:------------------------------|:--------------------------------------|:-------------------------------|:-----------------------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:------------------------|:------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------|:-------------------------|
+| Kong         | gateway-operator              | v1.4.0                | expressions | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
+| Kong         | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
+| cilium       | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
+| envoyproxy   | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| istio        | istio                         | 1.24                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| nginx        | nginx-gateway-fabric          | v1.5.0                | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
+| solo.io      | gloo-gateway                  | v1.18.0               | default     | :x:                | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
+| traefik      | traefik                       | v3.2                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :white_check_mark:            | :white_check_mark:                  | :x:                                         | :x:                       | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
 
 ### GRPCRoute
 
-| Organization   | Project                       | Version               | Mode        | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
-|:---------------|:------------------------------|:----------------------|:------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
-| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :x:                            | :x:                                | :x:                | :x:                      |
-| cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| istio          | istio                         | 1.24                  | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| nginxinc       | nginx-gateway-fabric          | v1.5.0                | default     | :x:                            | :x:                                | :x:                | :x:                      |
-| traefik        | traefik                       | v3.2                  | default     | :x:                            | :x:                                | :x:                | :x:                      |
+| Organization | Project                       | Version               | Mode        | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
+|:-------------|:------------------------------|:----------------------|:------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
+| Kong         | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :x:                            | :x:                                | :x:                | :x:                      |
+| cilium       | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| envoyproxy   | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| istio        | istio                         | 1.24                  | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| nginx        | nginx-gateway-fabric          | v1.5.0                | default     | :x:                            | :x:                                | :x:                | :x:                      |
+| traefik      | traefik                       | v3.2                  | default     | :x:                            | :x:                                | :x:                | :x:                      |
 
 ### TLSRoute
 
-| Organization   | Project              | Version       | Mode    | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
-|:---------------|:---------------------|:--------------|:--------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
-| cilium         | cilium               | v1.17.0-pre.1 | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| envoyproxy     | envoy-gateway        | v1.2.0-rc.1   | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| istio          | istio                | 1.24          | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| nginxinc       | nginx-gateway-fabric | v1.5.0        | default | :x:                            | :x:                                | :x:                | :x:                      |
-| traefik        | traefik              | v3.2          | default | :x:                            | :x:                                | :x:                | :x:                      |
+| Organization | Project              | Version       | Mode    | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
+|:-------------|:---------------------|:--------------|:--------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
+| cilium       | cilium               | v1.17.0-pre.1 | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| envoyproxy   | envoy-gateway        | v1.2.0-rc.1   | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| istio        | istio                | 1.24          | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| nginx        | nginx-gateway-fabric | v1.5.0        | default | :x:                            | :x:                                | :x:                | :x:                      |
+| traefik      | traefik              | v3.2          | default | :x:                            | :x:                                | :x:                | :x:                      |
 
 ## Mesh Profile
 
