--- a/site-src/implementations/v1.1.md
+++ b/site-src/implementations/v1.1.md
@@ -27,8 +27,8 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium                        | v1.16.0            | default                          | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
 | envoyproxy     | envoy-gateway                 | v1.1.0             | default                          | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
 | istio          | istio                         | 1.22               | default                          | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
-| nginx          | nginx-gateway-fabric          | v1.3.0             | default                          | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
-| nginx          | nginx-gateway-fabric          | v1.4.0             | default                          | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
+| nginxinc       | nginx-gateway-fabric          | v1.3.0             | default                          | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
+| nginxinc       | nginx-gateway-fabric          | v1.4.0             | default                          | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
 | projectcontour | contour                       | v1.30.0            | default                          | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
 | traefik        | traefik                       | v3.1.0             | default                          | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :x:                      | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
 
@@ -41,8 +41,8 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium                        | v1.16.0   | default     | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
 | envoyproxy     | envoy-gateway                 | v1.1.0    | default     | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
 | istio          | istio                         | 1.22      | default     | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
-| nginx          | nginx-gateway-fabric          | v1.3.0    | default     | :x:                            | :x:                | :x:                      |
-| nginx          | nginx-gateway-fabric          | v1.4.0    | default     | :x:                            | :x:                | :x:                      |
+| nginxinc       | nginx-gateway-fabric          | v1.3.0    | default     | :x:                            | :x:                | :x:                      |
+| nginxinc       | nginx-gateway-fabric          | v1.4.0    | default     | :x:                            | :x:                | :x:                      |
 | projectcontour | contour                       | v1.30.0   | default     | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
 
 ### TLSRoute
@@ -52,7 +52,7 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium               | v1.16.0   | default | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
 | envoyproxy     | envoy-gateway        | v1.1.0    | default | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
 | istio          | istio                | 1.22      | default | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
-| nginx          | nginx-gateway-fabric | v1.4.0    | default | :x:                            | :x:                | :x:                      |
+| nginxinc       | nginx-gateway-fabric | v1.4.0    | default | :x:                            | :x:                | :x:                      |
 | projectcontour | contour              | v1.30.0   | default | :white_check_mark:             | :white_check_mark: | :white_check_mark:       |
 
 ## Mesh Profile
