--- a/CHANGELOG/1.3-CHANGELOG.md
+++ b/CHANGELOG/1.3-CHANGELOG.md
@@ -8,6 +8,40 @@
 
 TBD
 
+# v1.3.0-rc.2
+- _start-sha: b316db57e63e9a58058880982750dc035a347d6_
+- _end-sha: 703048161530940bcd3425bc51f21d034b4b6880_
+
+We expect that this release candidate is quite close to the final v1.3.0
+release. However, subsequent breaking API changes are still possible.
+
+This release candidate is suitable for implementors, but we do not recommend
+shipping products based on a release candidate API due to the possibility of
+incompatible changes prior to the final release. The following represents the
+changes since v1.3.0-rc.1:
+
+## Changes by Kind
+
+### API
+
+* `None` has been removed as option for Route Namespaces (was added in rc.1 as
+  accidental part of ListenerSet additions). ([#3748](https://github.com/kubernetes-sigs/gateway-api/pull/3748),[@robscott](https://github.com/robscott))
+* XListenerSet Port is required. (It was already effectively required due to 0
+  being an invalid value, but had been marked optional).
+  ([#3753](https://github.com/kubernetes-sigs/gateway-api/pull/3753),[@robscott](https://github.com/robscott))
+
+
+### Conformance
+
+* Fixes flake in ExpectMirroredRequest test ([#3708](https://github.com/kubernetes-sigs/gateway-api/pull/3708),[@mhofstetter](https://github.com/mhofstetter))
+* Revert change to mirror threshold (back to v1.2 state) ([#3727](https://github.com/kubernetes-sigs/gateway-api/pull/3727),[@howardjohn](https://github.com/howardjohn))
+* GatewayInfrastructure feature has been marked as "Standard" ([#3710](https://github.com/kubernetes-sigs/gateway-api/pull/3710),[@mlavacca](https://github.com/mlavacca))
+* GatewayEmptyAddress feature has been marked as "Standard" ([#3711](https://github.com/kubernetes-sigs/gateway-api/pull/3711),[@mlavacca](https://github.com/mlavacca))
+
+### Docs
+
+* Small clarification to HTTPRouteMatch rules ([#3741](https://github.com/kubernetes-sigs/gateway-api/pull/3741),[@vehagn](https://github.com/vehagn))
+
 # v1.3.0-rc.1
 - _start-sha: 066411e5d45ea58c954bc144b88f82f534355a63_
 - _end-sha: b316db57e63e9a58058880982750dc035a347d6_
